--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ Brotli==1.1.0
 click==8.1.8
 colorama==0.4.6
 dj-database-url==2.3.0
-Django==5.1.5
+Django>=5.1.9,<6.0
 gunicorn==23.0.0
 h11==0.14.0
 packaging==24.2
